--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-three/fiber": "^8.10.0",
     "@types/three": "^0.148.0",
     "framer-motion": "^8.5.2",
+    "i18next": "^23.7.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.7.1",
     "three": "^0.148.0"
   },
